# wikir

./: .flake8  LICENSE  README.md  mypy.ini  noxfile.py  pyproject.toml
.github/workflows/: test-pypi.yml  tests.yml
docs/: conf.py  index.rst  reference.rst  requirements.txt
src/wikir/: __init__.py  console.py  wikipedia.py
tests/: __init__.py  test_console.py  test_wikipedia.py  test_wikir.py
